# ESP32-IMIC-Practice-Projects

./: CMakeLists.txt  README.md  sdkconfig
BLE GUI/: app.py
annoying_default_funcs/: CMakeLists.txt  nvs_init_in_main.c  nvs_init_in_main.h
components/: CMakeLists.txt
components/esp32_peripherals/: CMakeLists.txt  ESP_BLE.c  ESP_BLE.h  ESP_DAC.h  ESP_WIFI_BLE.c  URI_CONFIG.h  api.h  core_http_client.c  core_http_client.h  esp_client_http.c  tcp_udp_socket.c  tcp_udp_socket.h  transport_interface.h  uri_handler.h  wifi_sta_ap.c  wifi_sta_ap.h
components/esp32_peripherals/Include/: ESP_ADC.h  ESP_BLE.h  URI_CONFIG.h  esp_client_http.h
components/pahoMQTT/: CMakeLists.txt  Log.c  Thread.c  WebSocket.c
components/pahoMQTT/Include/: Socket.h
components/rc522/: CMakeLists.txt  rc522.h
main/: CMakeLists.txt  main.c  rc522_esp.c
src/: CMakeLists.txt  ESP_ADC.c  ESP_BLE.c  ESP_DAC.c  ESP_SPI.c  ESP_SPI.h  ESP_WIFI_BLE.c  ESP_WIFI_BLE.h  rc522.c
